完成了设置界面的其余功能实现，相关界面的跳转，去评分功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,6 +175,9 @@
     <string name="help">帮助</string>
     <string name="about">关于</string>
     <string name="quit">退出</string>
+    <string name="go_socre">去评分</string>
+    <string name="function_introduction">功能介绍</string>
+    <string name="common_problems">常见问题</string>
 
 
 </resources>
